tests/macros/float/plugin.stderr
error: option `plugin` does not exist for kind `float`
 --> $DIR/plugin.rs:2:43
  |
2 |     let q = requestty::questions![Float { plugin: todo!() }];
  |                                           ^^^^^^
