tests/macros/float/plugin.rs
fn main() {
    let q = requestty::questions![Float { plugin: todo!() }];
}
